# titania

./: CMakeLists.txt  CompileNotes.md  LICENSE  README.md
Parser/: CMakeLists.txt  KeyParser.cpp  OwnHash.cpp  Parser.cpp  RDCParser.cpp  StructureParser.cpp
cmake/: 3rdparty_CPPunit.cmake  3rdparty_Eigen3.cmake  3rdparty_NLopt.cmake  3rdparty_OpenBLAS.cmake  CompilerWarnings.cmake  Linker.cmake  Packaging.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: Atom.hpp  AxesDefinitions.hpp  Bond.hpp  DIDC.hpp  Declarations.hpp  Eckart.hpp  Fragment.hpp  FragmentFlag.hpp  Helper.hpp  IndependencyAnalysis.hpp  LinAlg.hpp  MC_Output.hpp  Main.hpp  Molecule.hpp  MonteCarloStatistic.hpp  Output.hpp  OutputOptions.hpp  Potential.hpp  Properties.hpp  RDCdata.hpp  RDCset.hpp  RedundantCalculation.hpp  RedundantInternals.hpp  SCRM.hpp  ShoemakeEulerAngles.hpp  Simplex.hpp  SphericalHarmonics.hpp  SphericalHarmonicsMatrix.hpp  Structure.hpp  StructureOptions.hpp  StructureSimulator.hpp  mmff94.ff  version.hpp.in
include/Parser/: OwnHash.hpp  Parser.hpp
plugins/cuda/: CMakeLists.txt
plugins/cuda/include/: cuda_get_information.hpp  cuda_helper.hpp  cuda_matmult_double.hpp  cuda_mpi_double.hpp  cuda_svd.hpp  cuda_svd_double.hpp  cuda_svd_single.hpp
plugins/cuda/src/: cuda_get_information.cu  cuda_helper.cu  cuda_matmult_double.cu  cuda_mpi_double.cu  cuda_svd_double.cu  cuda_svd_single.cu
plugins/phobos/: CMakeLists.txt
plugins/phobos/include/: phobos.h
plugins/phobos/src/: phobos.c
scripts/gnuplot/: plot_trajectory.gnu
scripts/helper/: extract_trajectory.sh  plot_dynamics.sh  plot_montecarlo_polar.sh
scripts/python/: Readme.md  calculate_rmsd.py  monitor_TITANIA.py  parse_titania_out.py  plot_SECONDA.py  plot_trajectory.py
src/: Atom.cpp  Bond.cpp  CMakeLists.txt  DIDC.cpp  Eckart.cpp  Fragment.cpp  Helper.cpp  IndependencyAnalysis.cpp  LinAlg.cpp  Main.cpp  Molecule.cpp  MonteCarloStatistic.cpp  Output.cpp  Potential.cpp  Properties.cpp  RDCdata.cpp  RDCset.cpp  RedundantInternals.cpp  SCRM.cpp  ShoemakeEulerAngles.cpp  Simplex.cpp  SphericalHarmonics.cpp  SphericalHarmonicsMatrix.cpp  Structure.cpp  StructureSimulator.cpp
standard_inputs/: aSantonin.tna  bpinen.tna  camphor.tna  camphorsultam.tna  ipc.tna  ipc_with_CC.tna  strychnine.tna  ubi_2.tna
standard_inputs/rdcs/Camphor/: camphor01.csv  camphor02.csv  camphor03.csv  camphor04.csv  camphor05.csv  camphor07.csv  camphor08.csv  camphor10.csv  camphor11.csv
standard_inputs/rdcs/Camphorsultam/: camphorsultam01.csv  camphorsultam02.csv  camphorsultam03.csv  camphorsultam04.csv  camphorsultam05.csv  camphorsultam06.csv  camphorsultam07.csv  camphorsultam08.csv  camphorsultam09.csv  camphorsultam10.csv  camphorsultam11.csv
standard_inputs/rdcs/IPC/: JR_BT_002_305K.csv  JR_BT_002_309K.csv  ipc01.csv  ipc02.csv  ipc03.csv  ipc04.csv  ipc05.csv  ipc06.csv  ipc07.csv  ipc08.csv  ipc09.csv  ipc10.csv  ipc11.csv
standard_inputs/rdcs/IPC/reduced/: JR_BT_002_305K.csv  JR_BT_002_309K.csv  MK_Caesar.csv  MK_Caesar.csv.trimmed  ipc02.csv  ipc04.csv  ipc05.csv  ipc07.csv  ipc08.csv  ipc10.csv
standard_inputs/rdcs/Strychnine/: strychnine01.csv  strychnine02.csv  strychnine03.csv  strychnine04.csv  strychnine05.csv  strychnine06.csv  strychnine07.csv  strychnine08.csv  strychnine09.csv  strychnine10.csv  strychnine11.csv  strychnine12.csv
standard_inputs/rdcs/aSantonin/: aSantonin_01.csv  aSantonin_02.csv  aSantonin_03.csv  aSantonin_04.csv  aSantonin_05.csv  aSantonin_06.csv  aSantonin_07.csv  aSantonin_08.csv  aSantonin_09.csv
standard_inputs/rdcs/aSantonin_reduced/: aSantonin_01.csv  aSantonin_02.csv  aSantonin_03.csv  aSantonin_04.csv  aSantonin_05.csv  aSantonin_06.csv  aSantonin_07.csv  aSantonin_08.csv  aSantonin_09.csv
standard_inputs/rdcs/betaPinen/: bPinen01.csv  bPinen02.csv  bPinen03.csv  bPinen04.csv  bPinen05.csv  bPinen06.csv  bPinen08.csv  bPinen09.csv  bPinen10.csv  bPinen11.csv
standard_inputs/rdcs/reduced/: MK_Caesar.csv  jr1.csv  jr11.csv  jr3.csv  jr6.csv  jr9.csv
standard_inputs/rdcs/ubiquitin/: BIC1.csv  BIC2.csv  C12E5.csv  Helfrich.csv  PM1.csv  PM2.csv  PM3.csv  PM4.csv  PM5.csv  PM6.csv  Phage.csv
standard_inputs/stan/: keywords.stan
unit/: CMakeLists.txt
unit/include/: AtomTest.h  FragmentTest.h  LinAlgTest.h  RedundantInternalsTest.h  RemovePlanarityTest.hpp  SimplexTest.hpp  StanIPC.h  StructureSimulatorTest.hpp  main.h  phobosTest.h
unit/src/: AtomTest.cpp  FragmentTest.cpp  LinAlgTest.cpp  RedundantInternalsTest.cpp  RemovePlanarityTest.cpp  SimplexTest.cpp  StanIPC.cpp  StructureSimulatorTest.cpp  main.cpp  phobosTest.cpp
unit/systems/: IPC  cppunit_input.tna.in  wigner_deviation.stan
unit/systems/stan/: keywords.stan
